fix(trace,prompt): adversarial-review hardening for 2.7.0
Correctness fixes from the multi-angle review pass:
- TraceBuilder.totalTokens now resolves per span, recursively: typed
  usage wins per span, legacy inputTokens/outputTokens attributes still
  count for model-call spans without it. Fixes the mixed-migration
  undercount where one typed span silently dropped every legacy span's
  tokens, and the pre-2.7 gap where nested attribute-recorded spans were
  never counted.
- helios_prompts gains a partial unique index (name) WHERE active,
  making the at-most-one-active invariant database-enforced; the
  concurrent register+activate race that could commit two active rows
  under READ COMMITTED now fails loudly for the loser. Migration note +
  dedupe query in CHANGELOG.
- PgTestSupport fresh-schema DROP list now includes helios_spans (first
  release to change its shape; a reused test DB kept the old table).

Robustness/quality:
- TraceRollup gains the conventional Builder (mapper no longer passes
  12 positional longs) and preserves key insertion order.
- TraceRollupSql.dimensions(key) is the single column/mapKey definition
  shared by query builder and mapper; percentiles computed via one
  percentile_cont(ARRAY[0.5, 0.95]) sort instead of two.
- PgTraceStore usage/cost bind values built by one shared helper for
  traces and spans; InMemoryPromptRegistry.resolve scans newest-first;
  TraceBuilder rollups share one generic tree fold.
- CHANGELOG gains an explicit Breaking section (record constructor
  arity, PromptRegistry abstract methods, AssistantCitations subtype,
  overflow now fail-fast) and documents Usage-total round-trip
  semantics.

Co-Authored-By: Claude Fable 5 <noreply@anthropic.com>
Claude-Session: https://claude.ai/code/session_01GA55DRqMSHuyAT4maC66VD